--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 et-xmlfile==1.0.1
 jdcal==1.4.1
 openpyxl==3.0.5
+
+setuptools==50.0.3
+requests==2.24.0
+chardet==3.0.4
+certifi==2020.11.8
+urllib3==1.25.11
+idna==2.10
