Integrando Pipenv Travis e Pyup Nesse tópico você vai conferir como integrar o Pipenv com o Travis e Py Comandos utilizados: - pipenv sync -d
close #61

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,15 @@ sudo: true
 python:
   - 3.7
 
+env:
+  global:
+    - PIPENV_VENV_IN_PROJECT=1
+    - PIPENV_IGNORE_VIRTUALENVS=1
+
 install:
-  - pip install -q -r requirements-dev.txt
+  - pip install pipenv
+  - pipenv sync -d
 
 script:
-  - flake8
-  - pytest gppinovacao
+  - pipenv run flake8 .
+  - pipenv run pytest
