--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,7 @@ install:
 
 script:
   - pipenv run flake8 .
-  - pipenv run pytest
+  - pipenv run pytest --cov=gppdjango
+
+after_success:
+  - pipenv run codecov
