--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ gunicorn = "*"
 pytest = "*"
 flake8 = "*"
 pytest-django = "*"
+pytest-cov = "*"
+codecov = "*"
 
 [requires]
 python_version = "3.7"
